--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,10 @@ edition = "2021"
 bincode = { version = "1.3.3", features = [] }
 serde = { version = "1.0.145", features = ["derive"] }
 serde_bytes ={ version = "0.11.7"}
+serde_json = { version = "1.0" }
 bitflags ={ version = "1.3.2"}
+curve25519-dalek = { version = "3.2.1" }
+log = { version = "0.4.17" }
+env_logger = { version = "0.9.1" }
+log4rs = { version = "1.2.0" }
+clap = { version = "4.0.15", features = ["derive"] }
